--- a/src/main/java/org/jabref/gui/search/HistoryDialog.fxml
+++ b/src/main/java/org/jabref/gui/search/HistoryDialog.fxml
@@ -5,8 +5,32 @@
 <DialogPane prefWidth="530.0" prefHeight="510.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.jabref.gui.search.HistoryDialogView">
     <content>
         <VBox alignment="CENTER_LEFT" BorderPane.alignment="CENTER">
-
-            <TextArea fx:id="textAreaVersions" editable="false" prefHeight="600.0" prefWidth="200.0" styleClass="info-sections"/>
+            <!--            <TextArea fx:id="textAreaVersions" editable="false" prefHeight="600.0" prefWidth="200.0" styleClass="info-sections"/>-->
+            <TableView
+                    fx:id="searchHistoryTable"
+                    HBox.hgrow="ALWAYS"
+                    editable="true">
+                <columns>
+                    <TableColumn
+                            fx:id="searchHistoryStringColumn"
+                            text="%Search String"
+                            reorderable="false"
+                    />
+                    <TableColumn
+                            fx:id="searchHistoryDateColumn"
+                            text="Date"
+                            maxWidth="150.0"
+                            prefWidth="150.0"
+                            minWidth="150.0"
+                            resizable="false"
+                            reorderable="false"
+                    />
+                </columns>
+                <columnResizePolicy>
+                    <TableView
+                            fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                </columnResizePolicy>
+            </TableView>
         </VBox>
     </content>
     <header>
