--- a/src/main/java/org/jabref/gui/search/HistoryDialog.fxml
+++ b/src/main/java/org/jabref/gui/search/HistoryDialog.fxml
@@ -5,7 +5,6 @@
 <DialogPane prefWidth="530.0" prefHeight="510.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.jabref.gui.search.HistoryDialogView">
     <content>
         <VBox alignment="CENTER_LEFT" BorderPane.alignment="CENTER">
-            <!--            <TextArea fx:id="textAreaVersions" editable="false" prefHeight="600.0" prefWidth="200.0" styleClass="info-sections"/>-->
             <TableView
                     fx:id="searchHistoryTable"
                     HBox.hgrow="ALWAYS"
@@ -25,6 +24,14 @@
                             resizable="false"
                             reorderable="false"
                     />
+                    <TableColumn
+                            fx:id="searchHistoryRemoveColumn"
+                            text=""
+                            maxWidth="30.0"
+                            prefWidth="30.0"
+                            minWidth="30.0"
+                            reorderable="false"
+                            resizable="false"/>
                 </columns>
                 <columnResizePolicy>
                     <TableView
